--- a/app/src/main/res/layout-v23/fragment_movies_details.xml
+++ b/app/src/main/res/layout-v23/fragment_movies_details.xml
@@ -16,6 +16,15 @@
         android:paddingBottom="16dp">
 
         <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/mask"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
             android:id="@+id/iv_backdrop"
             android:layout_width="match_parent"
             android:layout_height="300dp"
