--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,12 +2,10 @@
 <androidx.fragment.app.FragmentContainerView
     android:id="@+id/container"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:name="com.bignerdranch.android.androidacademy.FragmentMoviesList"/>
+    android:name="com.bignerdranch.android.androidacademy.FragmentMoviesList"
+    android:background="@color/background"/>
 
 
 
