--- a/app/src/main/res/layout/fragment_movies_list.xml
+++ b/app/src/main/res/layout/fragment_movies_list.xml
@@ -1,16 +1,15 @@
-<ScrollView
+<androidx.core.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:background="@color/background">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:layout_gravity="center_horizontal"
-        app:layout_anchorGravity="center_horizontal">
+        >
 
         <TextView
             android:id="@+id/tv_movie_list"
@@ -25,20 +24,22 @@
             android:drawablePadding="10dp"
             android:layout_marginTop="40dp"
             android:layout_marginStart="16dp"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            android:paddingBottom="10dp"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_movie"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-            tools:context=".MainActivity"
-            app:spanCount="2"
             android:foregroundGravity="center"
-            tools:listitem="@layout/view_holder_movie"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_movie_list"
-            app:layout_constraintLeft_toLeftOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:spanCount="2"
+            tools:context=".MainActivity"
+            tools:listitem="@layout/view_holder_movie" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</ScrollView>
+</androidx.core.widget.NestedScrollView>
