--- a/app/src/main/res/layout/view_holder_actor.xml
+++ b/app/src/main/res/layout/view_holder_actor.xml
@@ -11,7 +11,7 @@
     <ImageView
         android:id="@+id/iv_avatar"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         tools:src="@drawable/robert"
         android:contentDescription="@string/robert"/>
 
