--- a/app/src/main/res/layout/view_holder_movie.xml
+++ b/app/src/main/res/layout/view_holder_movie.xml
@@ -4,12 +4,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="200dp"
     android:layout_height="wrap_content"
     android:background="@color/background"
-    android:padding="16dp"
-    android:layout_gravity="center_horizontal">
-
+    android:padding="16dp">
 
         <ImageView
                 android:id="@+id/movie_bg_img"
@@ -19,134 +17,140 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
 
-            <ImageView
-                android:id="@+id/iv_movie"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:scaleType="centerCrop"
-                android:src="@drawable/movie"
-                android:foreground="@drawable/mask"
-                app:layout_constraintTop_toTopOf="@id/movie_bg_img"
-                app:layout_constraintStart_toStartOf="@id/movie_bg_img"
-                android:layout_margin="2dp"/>
+        <ImageView
+            android:id="@+id/iv_movie"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:foreground="@drawable/mask"
+            android:scaleType="centerCrop"
+            android:src="@drawable/movie"
+            app:layout_goneMarginTop="4dp"
+            android:layout_marginTop="1dp"
+            app:layout_constraintStart_toStartOf="@id/movie_bg_img"
+            app:layout_constraintTop_toTopOf="@+id/movie_bg_img"
+            app:layout_constraintEnd_toEndOf="@+id/movie_bg_img"
+            app:layout_constraintBottom_toBottomOf="@id/movie_bg_img"
+            android:layout_marginBottom="45dp"/>
 
-            <TextView
-                android:id="@+id/tv_age"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="9dp"
-                tools:text="@string/txt13"
-                android:textColor="@color/white"
-                android:textStyle="bold"
-                android:textSize="12sp"
-                android:paddingHorizontal="2dp"
-                android:paddingVertical="4dp"
-                android:background="@drawable/rectangle"
-                app:layout_constraintStart_toStartOf="@id/movie_bg_img"
-                app:layout_constraintTop_toTopOf="@id/movie_bg_img" />
+        <TextView
+            android:id="@+id/tv_age"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="9dp"
+            tools:text="@string/txt13"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textSize="12sp"
+            android:paddingHorizontal="2dp"
+            android:paddingVertical="4dp"
+            android:background="@drawable/rectangle"
+            app:layout_constraintStart_toStartOf="@id/movie_bg_img"
+            app:layout_constraintTop_toTopOf="@id/movie_bg_img" />
 
-            <ImageView
-                android:id="@+id/iv_like"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:src="@drawable/like"
-                app:layout_constraintTop_toTopOf="@id/movie_bg_img"
-                app:layout_constraintEnd_toEndOf="@id/movie_bg_img"
-                android:layout_marginTop="12dp"
-                android:layout_marginEnd="6dp"/>
+        <ImageView
+            android:id="@+id/iv_like"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:src="@drawable/like"
+            app:layout_constraintTop_toTopOf="@id/movie_bg_img"
+            app:layout_constraintEnd_toEndOf="@id/movie_bg_img"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="6dp"/>
 
-            <TextView
-                android:id="@+id/tv_genre"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginBottom="22dp"
-                tools:text="@string/genre"
-                android:textColor="@color/red"
-                android:textSize="8sp"
-                app:layout_constraintStart_toStartOf="@id/movie_bg_img"
-                app:layout_constraintBottom_toBottomOf="@id/iv_movie" />
+        <TextView
+            android:id="@+id/tv_genre"
+            android:layout_width="145dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="22dp"
+            tools:text="@string/genre"
+            android:textColor="@color/red"
+            android:textSize="8sp"
+            app:layout_constraintStart_toStartOf="@id/movie_bg_img"
+            app:layout_constraintBottom_toBottomOf="@id/iv_movie" />
 
 
-            <androidx.appcompat.widget.AppCompatRatingBar
-                android:id="@+id/ratingbar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="@id/movie_bg_img"
-                app:layout_constraintBottom_toBottomOf="@+id/iv_movie"
-                android:numStars="5"
-                tools:rating="4"
-                android:theme="@style/RatingBar"
-                android:layout_marginStart="-2dp"
-                android:layout_marginBottom="4dp"
-                android:scaleX="0.75"
-                android:scaleY="0.75"
-                style="?android:attr/ratingBarStyleSmall"/>
+        <androidx.appcompat.widget.AppCompatRatingBar
+            android:id="@+id/ratingbar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="@id/movie_bg_img"
+            app:layout_constraintBottom_toBottomOf="@+id/iv_movie"
+            android:numStars="5"
+            tools:rating="4"
+            android:theme="@style/RatingBar"
+            android:layout_marginStart="-2dp"
+            android:layout_marginBottom="4dp"
+            android:scaleX="0.75"
+            android:scaleY="0.75"
+            style="?android:attr/ratingBarStyleSmall"/>
 
-            <TextView
-                android:id="@+id/tv_views"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="2dp"
-                android:layout_marginTop="4dp"
-                tools:text="@string/num_of_views"
-                android:textColor="@color/gray"
-                android:textStyle="bold"
-                android:textSize="8sp"
-                app:layout_constraintLeft_toRightOf="@id/ratingbar"
-                app:layout_constraintTop_toBottomOf="@+id/tv_genre" />
+        <TextView
+            android:id="@+id/tv_views"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="2dp"
+            android:layout_marginTop="4dp"
+            tools:text="@string/num_of_views"
+            android:textColor="@color/gray"
+            android:textStyle="bold"
+            android:textSize="8sp"
+            app:layout_constraintLeft_toRightOf="@id/ratingbar"
+            app:layout_constraintTop_toBottomOf="@+id/tv_genre" />
 
-            <TextView
-                android:id="@+id/views_txt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:layout_marginTop="4dp"
-                android:text="@string/reviews_txt"
-                android:textColor="@color/gray"
-                android:textStyle="bold"
-                android:textSize="8sp"
-                app:layout_constraintStart_toEndOf="@id/tv_views"
-                app:layout_constraintTop_toBottomOf="@+id/tv_genre" />
+        <TextView
+            android:id="@+id/views_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="4dp"
+            android:text="@string/reviews_txt"
+            android:textColor="@color/gray"
+            android:textStyle="bold"
+            android:textSize="8sp"
+            app:layout_constraintStart_toEndOf="@id/tv_views"
+            app:layout_constraintTop_toBottomOf="@+id/tv_genre" />
 
-            <TextView
-                android:id="@+id/movie_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                tools:text="@string/avengers_end_game"
-                android:textColor="@color/white"
-                android:textSize="14sp"
-                android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="@id/movie_bg_img"
-                app:layout_constraintTop_toBottomOf="@id/iv_movie" />
+        <TextView
+            android:id="@+id/movie_title"
+            android:layout_width="153dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            tools:text="@string/avengers_end_game"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            android:ellipsize="end"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="@id/movie_bg_img"
+            app:layout_constraintTop_toBottomOf="@id/iv_movie"
+            android:singleLine="true" />
 
-            <TextView
-                android:id="@+id/tv_duration"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="@id/movie_bg_img"
-                app:layout_constraintStart_toStartOf="@id/movie_bg_img"
-                tools:text="137"
-                android:layout_marginStart="8dp"
-                android:layout_marginBottom="8dp"
-                android:textColor="#565665"
-                android:textStyle="bold"
-                android:textSize="8sp"/>
+        <TextView
+            android:id="@+id/tv_duration"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="@id/movie_bg_img"
+            app:layout_constraintStart_toStartOf="@id/movie_bg_img"
+            tools:text="137"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="8dp"
+            android:textColor="#565665"
+            android:textStyle="bold"
+            android:textSize="8sp"/>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="@id/movie_bg_img"
-                app:layout_constraintStart_toEndOf="@id/tv_duration"
-                android:text="@string/movie_duration"
-                android:layout_marginStart="4dp"
-                android:layout_marginBottom="8dp"
-                android:textColor="#565665"
-                android:textStyle="bold"
-                android:textSize="8sp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="@id/movie_bg_img"
+            app:layout_constraintStart_toEndOf="@id/tv_duration"
+            android:text="@string/movie_duration"
+            android:layout_marginStart="4dp"
+            android:layout_marginBottom="8dp"
+            android:textColor="#565665"
+            android:textStyle="bold"
+            android:textSize="8sp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
