--- a/app/src/main/res/layout/view_holder_movie.xml
+++ b/app/src/main/res/layout/view_holder_movie.xml
@@ -24,8 +24,8 @@
             android:foreground="@drawable/mask"
             android:scaleType="centerCrop"
             android:src="@drawable/movie"
-            app:layout_goneMarginTop="4dp"
-            android:layout_marginTop="1dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginHorizontal="4dp"
             app:layout_constraintStart_toStartOf="@id/movie_bg_img"
             app:layout_constraintTop_toTopOf="@+id/movie_bg_img"
             app:layout_constraintEnd_toEndOf="@+id/movie_bg_img"
