--- a/app/src/main/res/layout/fragment_movies_details.xml
+++ b/app/src/main/res/layout/fragment_movies_details.xml
@@ -147,17 +147,17 @@
             android:textStyle="normal"
             app:layout_constraintTop_toBottomOf="@id/description_view" />
 
-<!--        <androidx.recyclerview.widget.RecyclerView-->
-<!--            android:id="@+id/rv_actor"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            app:layout_constraintTop_toBottomOf="@id/cast"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
-<!--            android:orientation="horizontal"-->
-<!--            tools:listitem="@layout/view_holder_actor"-->
-<!--            android:layout_marginHorizontal="16dp"-->
-<!--            android:layout_marginTop="5dp"/>-->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_actor"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/cast"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            android:orientation="horizontal"
+            tools:listitem="@layout/view_holder_actor"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="5dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
